# server/api/controllers/examples/router.js
@@ -4,5 +4,6 @@ import controller from './controller';
 export default express
   .Router()
   .post('/', controller.create)
+  .post('/get_user',controller.getUser)
   .get('/', controller.all)
   .get('/:id', controller.byId);
